--- a/employee-service.properties
+++ b/employee-service.properties
@@ -8,4 +8,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 
+spring.boot.message=Hello, this is employee service microservice
+
 eureka.instance.client.server-url.default-zone=http://localhost:8761/eureka/
